# firebuild

./: .gitignore  Brewfile  CMakeLists.txt  CMakeOptions.txt  ChangeLog  Doxyfile.in  EXAMPLE_WRAPPER_USAGE.md  LICENSE.md  README.md  TODO  bitrise.yml  fbb_test_serialized_debug.txt  firebuild.spec
.github/: COPILOT.md
.github/copilot/: agent.yaml
.github/workflows/: build.yml  codeql.yml
cmake/modules/: FindFlatBuffers.cmake  FindLibConfig.cmake
data/: build-report.html  tree.html  tree_style.css
debian/: changelog  config  control  copyright  firebuild.install  libfirebuild0.install  libfirebuild0.lintian-overrides  postinst  rules  templates  watch
debian/po/: ca.po  de.po  es.po  nl.po  pt.po  pt_BR.po  ro.po  sv.po  templates.pot
debian/tests/: build-time-tests-with-installed-firebuild  control  recompile-bash
doc/: README.developer  fork-exec-and-friends.txt  static-structure-diagram.dia
etc/: firebuild.conf  firebuildrc
etc/bash_completion.d/: firebuild
man/: .gitignore  CMakeLists.txt  firebuild.1.xml.in
src/: .gitignore  CMakeLists.txt  CPPLINT.cfg  Debug.h  ExecedProcess.cc  ExecedProcess.h  File.cc  File.h  FileDB.cc  FileDB.h  FileFD.h  FileUsage.cc  FileUsage.h  ForkedProcess.cc  ForkedProcess.h  Process.cc  Process.h  ProcessFactory.cc  ProcessFactory.h  ProcessPBAdaptor.cc  ProcessPBAdaptor.h  ProcessTree.cc  ProcessTree.h  SHA256Hash.cc  SHA256Hash.h  cxx_lang_utils.h  env.c  env.h  fb-messages.proto  firebuild.cc  firebuild_common.cc  firebuild_common.cc~  firebuild_common.h  firebuild_common.h~  ic_file_ops.cc  ic_file_ops.h  ic_orig_fns.h  ic_redirect_only.cc  intercept.cc  intercept.h  (+1 more)
src/common/: CPPLINT.cfg  README_MSG_FRAME.txt  config.h.in  cstring_view.h  debug.cc  debug.h  debug_sysflags.c  debug_sysflags.h  fbbcomm.def  firebuild_common.c  firebuild_common.cc  firebuild_common.h  platform.h  shmq.c  shmq.h
src/common/contrib/: heapsort.c
src/common/fbb/: CPPLINT.cfg  README_FBB.txt  README_FBB_INTERNAL.txt  generate_fbb  tpl.c  tpl.h  tpl_decode.c
src/common/msg/: CPPLINT.cfg  README_FBB.txt  README_MSG_FRAME.txt  fb-messages.proto  generate_fbb  tpl.c  tpl.h
src/firebuild/: .gitignore  CMakeLists.txt  CPPLINT.cfg  Debug.h  ExecedProcess.cc  ExecedProcess.h  ExecedProcessParameters.cc  ExecedProcessParameters.h  File.cc  File.h  FileDB.cc  FileDB.h  FileFD.h  FileUsage.h  ForkedProcess.cc  ForkedProcess.h  Hash.cc  Process.cc  Process.h  ProcessFactory.cc  ProcessFactory.h  ProcessPBAdaptor.cc  ProcessPBAdaptor.h  ProcessTree.cc  ProcessTree.h  SHA256Hash.cc  SHA256Hash.h  ascii_hash.h  base64.cc  base64.h  blob_cache.cc  blob_cache.h  cache.cc  cache.h  cache_object_format.fbs  command_rewriter.cc  command_rewriter.h  compat.h  config.cc  config.h  (+88 more)
src/firebuild/msg/: fb-cache.proto  fb-messages.proto
src/interceptor/: .gitignore  CMakeLists.txt  CPPLINT.cfg  env.c  env.h  generate_interceptors  ic_file_ops.c  ic_file_ops.cc  ic_file_ops.h  ic_platform.h  ic_redirect_only.c  ic_redirect_only.cc  intercept.c  intercept.cc  intercept.h  interceptors.c  interceptors.cc  interceptors.h  time64_cast.c  time64_cast.h  tpl.c  tpl.c.jinja2  tpl__exit.c  tpl__exit.c.jinja2  tpl__fork.c  tpl__fork.c.jinja2  tpl_clone.c  tpl_clone.c.jinja2  tpl_close.c  tpl_close_range.c  tpl_close_range.c.jinja2  tpl_closefrom.c  tpl_closefrom.c.jinja2  tpl_copy_file_range.c  tpl_copy_file_range.c.jinja2  tpl_dlopen.c  tpl_dlopen.c.jinja2  tpl_dup2.c  tpl_dup2.c.jinja2  tpl_error.c  (+54 more)
src/shim/: CMakeLists.txt  CPPLINT.cfg  firebuild-shim.c  firebuild-shim.h
test/: .gitignore  CMakeLists.txt  CPPLINT.cfg  close_fds_exec.c  empty-config.conf  fbb_test.cc  fbbtest.def  integration.bats  print_tbd_lib_arch_exports  run-firebuild  run-firebuild.in  test_cmd_clone.c  test_cmd_fork_exec.c  test_cmd_popen.c  test_cmd_posix_spawn.c  test_cmd_system.c  test_dlopen_lib.c  test_env_fixup.c  test_err.c  test_error.c  test_exec.c  test_file_ops.c  test_file_ops_2.c  test_file_ops_3.c  test_helper.bash  test_helper.bash.in  test_mtime.c  test_orphan.c  test_parallel_make.Makefile  test_pch.c  test_pch.h  test_pthreads.c  test_random.c  test_sendfile.c  test_stat.c  test_static.c  test_symbols  test_system.c  test_wait.c
tools/: calculate-coverage  fbcache-debug-json-prettifier  interceptor-strace-highlight  rebuild-self
